--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
     <meta property="og:title" content="Cabinet d'Avocats - Votre Défense, Notre Engagement" />
     <meta property="og:description" content="Cabinet d'avocats spécialisé offrant une expertise en droit des affaires, droit de la famille, droit pénal et droit immobilier. Votre justice, notre priorité." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
+    
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Lora:wght@400;500;600;700&display=swap">
     
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@CabinetAvocats" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="Cabinet d'Avocats - Votre Défense, Notre Engagement" />
+    <meta name="twitter:description" content="Cabinet d'avocats spécialisé offrant une expertise en droit des affaires, droit de la famille, droit pénal et droit immobilier. Votre justice, notre priorité." />
+   
   </head>
 
   <body>
